--- a/front-end/mean-app/src/app/components/home/home.component.html
+++ b/front-end/mean-app/src/app/components/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<div class="jumbotron text-center mt-5 bg-light rounded">
+    <h1 class="display-6">MEAN Stack Authentication Application</h1>
+    <p class="lead">
+        Welcome to our application that was built with MongoDD, Express, Angular and NodeJS hence the MEAN which abbreviates the technologies.</p>
+    <hr class="my-4">
+    <div>
+        <a class="btn btn-warning btn-lg m-2" routerLink="/register" role="button">Register</a>
+        <a class="btn btn-primary btn-lg" routerLink="/login" role="button">Login</a> 
+    </div>
+   <br>
+  </div>
+
+  <br>
+  <div class="row m-4">
+      <div class="col-md-4">
+          <h3>Express Backend</h3>
+          <p>Express.js, or simply Express, is a back end web application framework for Node.js</p>
+      </div>
+      <div class="col-md-4">
+          <h3>Angular-CLI</h3>
+          <p>Angular CLI provides an ng generate command which helps developers generate basic Angular artifacts such as modules, 
+              components, directives, pipes, and services</p>
+      </div>
+      <div class="col-md-4">
+          <h3>JWT Tokens</h3>
+          <p>Full feautured aunthentication using JSON web tokens, Login and store user data.</p>
+      </div>
+  </div>
