--- a/front-end/mean-app/src/app/components/navbar/navbar.component.html
+++ b/front-end/mean-app/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,18 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink='/'>MEAN-APP</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        </ul>
+        <form class="d-flex">
+        
+                <button class="btn btn-outline-warning m-2" type="submit" routerLink='/register'>Register</button>
+                <button class="btn btn-outline-primary m-2" type="submit" routerLink='/login'>Login</button>
+         
+        </form>
+      </div>
+    </div>
+</nav>
