--- a/front-end/mean-app/src/app/components/home/home.component.html
+++ b/front-end/mean-app/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center mt-5 bg-light rounded">
+<div class="jumbotron text-center mt-5 bg-light rounded m-3">
     <h1 class="display-6">MEAN Stack Authentication Application</h1>
     <p class="lead">
         Welcome to our application that was built with MongoDD, Express, Angular and NodeJS hence the MEAN which abbreviates the technologies.</p>
