--- a/front-end/mean-app/src/app/components/register/register.component.html
+++ b/front-end/mean-app/src/app/components/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<h2 class="page-header text-center mt-4">Register</h2>
+<form class="ml-2" (submit)="onRegister()">
+    <!-- name -->
+    <div class="form-group">
+        <label>Name</label>
+        <input type="text" [(ngModel)]="name" name="name" class="form-control">
+    </div>
+    <!-- username -->
+    <div class="form-group">
+        <label>Username</label>
+        <input type="text"  [(ngModel)]="username" name="username" class="form-control">
+    </div>
+    <!-- email-->
+    <div class="form-group">
+        <label>Email</label>
+        <input type="text"  [(ngModel)]="email" name="email" class="form-control">
+    </div>
+    <!-- password -->
+    <div class="form-group">
+        <label>Password</label>
+        <input type="password"  [(ngModel)]="password" name="password" class="form-control">
+    </div>
+    <br>
+    <input type="submit" class="btn btn-primary" value="Submit">
+</form>
