--- a/front-end/mean-app/src/app/components/register/register.component.html
+++ b/front-end/mean-app/src/app/components/register/register.component.html
@@ -1,25 +1,52 @@
-<h2 class="page-header text-center mt-4">Register</h2>
-<form class="ml-2" (submit)="onRegister()">
-    <!-- name -->
-    <div class="form-group">
-        <label>Name</label>
-        <input type="text" [(ngModel)]="name" name="name" class="form-control">
+<div class="alert alert-success mt-2" role="alert" *ngIf="success">
+    <p class="text-center">User Registered!</p>
+</div>
+<div class="alert alert-danger mt-2" role="alert" *ngIf="fail">
+    <p class="text-center">Something went wrong!</p>
+</div>
+
+<div class="container-fluid">
+    <div class="alert alert-secondary mt-5" role="alert">
+        <h1 class="text-center">User Registration</h1>
     </div>
-    <!-- username -->
-    <div class="form-group">
-        <label>Username</label>
-        <input type="text"  [(ngModel)]="username" name="username" class="form-control">
-    </div>
-    <!-- email-->
-    <div class="form-group">
-        <label>Email</label>
-        <input type="text"  [(ngModel)]="email" name="email" class="form-control">
-    </div>
-    <!-- password -->
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password"  [(ngModel)]="password" name="password" class="form-control">
-    </div>
-    <br>
-    <input type="submit" class="btn btn-primary" value="Submit">
-</form>
+
+    <form #userForm="ngForm" novalidate (ngSubmit)="onRegister()">
+        <!-- name -->
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text" required #name="ngModel" [class.is-invalid]="name.invalid && name.touched" class="form-control is-invalid" name="name"
+                 [(ngModel)]="userModel.name" placeholder="Enter your name">
+                 <small class="text-danger" [class.d-none]="name.valid || name.untouched">Name is required</small>
+        </div>
+        <br>
+
+        <!-- username -->
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" required #username="ngModel" [class.is-invalid]="username.invalid && username.touched" class="form-control" name="username" [(ngModel)]="userModel.username"
+                placeholder="Username">
+                <small class="text-danger" [class.d-none]="username.valid || username.untouched">Username is required</small>
+        </div>
+        <br>
+
+        <!-- email -->
+        <div class="form-group">
+            <label>Email</label>
+            <input type="email" required #email="ngModel" [class.is-invalid]="email.invalid && email.touched" class="form-control" name="email" [(ngModel)]="userModel.email"
+                placeholder="example@test.com">
+                <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required</small>
+        </div>
+        <br>
+
+        <!-- password -->
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" required #password="ngModel" [class.is-invalid]="password.invalid && password.touched" class="form-control" name="password" [(ngModel)]="userModel.password" placeholder="Password"> 
+            <small class="text-danger" [class.d-none]="password.valid || password.untouched">Password is required</small>    
+        </div>
+        <br>
+        <div class="d-flex justify-content-center">
+            <button [disabled]="userForm.form.invalid" type="submit" class="btn btn-primary">Register</button>
+        </div>
+    </form>
+</div>
