--- a/front-end/mean-app/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/mean-app/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,49 @@
-<p>dashboard works!</p>
+<div class="container mt-5">
+    <div class="alert alert-secondary mt-5" role="alert">
+        <h1 class="text-center">Dashboard</h1>
+        <h5 class="text-center">Welcome to your MEAN application dashboard</h5>
+    </div>
+    <div class="card-group">
+        <div class="card">
+          <img src="https://optimalbi.com/wp-content/uploads/2018/04/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png" class="card-img-top" alt="mongodb">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">MongoDB</h5>
+            <p class="card-text">
+                MongoDB is a source-available cross-platform document-oriented database program. 
+                Classified as a NoSQL database program, MongoDB uses JSON-like documents with optional schemas.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://expressjs.com/images/express-facebook-share.png" class="card-img-top" alt="express.js">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Express.js</h5>
+            <p class="card-text">
+                Express.js, or simply Express, is a back end web application framework for Node.js, released as free and open-source software under the MIT License. It is designed for building web applications and APIs. 
+                It has been called the de facto standard server framework for Node.js.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/1200px-Angular_full_color_logo.svg.png" class="card-img-top" alt="angular">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Angular</h5>
+            <p class="card-text">
+                Angular is a TypeScript-based open-source web application framework led by the Angular Team at Google and by a community of individuals and corporations. 
+                Angular is a complete rewrite from the same team that built AngularJS
+            </p>
+          </div>
+        </div>
+        <div class="card">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTogwU6U5z0Zf2lUxTE72JAKxVd52klwPe-Q&usqp=CAU" class="card-img-top" alt="nodejs">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Node.JS</h5>
+              <p class="card-text">
+                Node.js is an open-source, cross-platform, 
+                back-end JavaScript runtime environment that runs on the V8 engine and 
+                executes JavaScript code outside a web browser
+              </p>
+            </div>
+        </div>
+      </div>
+</div>
