--- a/front-end/mean-app/src/app/components/login/login.component.html
+++ b/front-end/mean-app/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
     
     <div class="alert alert-primary mt-5" role="alert">
         <h1 class="text-center">Login</h1>
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="text" class="form-control" [(ngModel)]="password" name="password">
+            <input type="password" class="form-control" [(ngModel)]="password" name="password">
             
         </div>
         <div class="d-flex justify-content-center mt-4">
