--- a/front-end/mean-app/src/app/components/profile/profile.component.html
+++ b/front-end/mean-app/src/app/components/profile/profile.component.html
@@ -1,1 +1,11 @@
-<p>profile works!</p>
+<div class="container mt-5" *ngIf="user">
+    <div class="card d-flex justify-content-center">
+        <div class="card-header text-center">
+            {{user.name}}
+        </div>
+        <ul class="list-group list-group-flush">
+        <li class="list-group-item">Username : {{user.username}}</li>
+        <li class="list-group-item">Email : {{user.email}}</li>
+        </ul>
+    </div>
+</div>
