--- a/front-end/mean-app/src/app/components/login/login.component.html
+++ b/front-end/mean-app/src/app/components/login/login.component.html
@@ -6,13 +6,12 @@
     
     <form (submit)="onLogin()">
         <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" [(ngModel)]="username" name="username">
+            <input type="text" class="form-control" [(ngModel)]="username" name="username" placeholder="Username">
             
         </div>
+        <br>
         <div class="form-group">
-            <label>Password</label>
-            <input type="password" class="form-control" [(ngModel)]="password" name="password">
+            <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Password">
             
         </div>
         <div class="d-flex justify-content-center mt-4">
